Add docker compose, author, book with controller and CRUD page

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "LibrarySystemContext": "Server=localhost,1433;Database=library;User Id=sa;Password=YourStrongPassword123!;TrustServerCertificate=True;"
+    }
 }
